# 3SAT

./: .vscode-ctags  CMakeLists.txt  README.md
lib/: build_3cnf.h  build_formula.h  parse_literals.h  solve_sat.h  test_input.h  verify_sat.h
src/: build_3cnf.c  build_formula.c  generate_test.c  parse_literals.c  solve_sat.c  verify_sat.c
test/: generate_tests.sh  test_suite.sh
